[gd_scene load_steps=9 format=2]

[ext_resource path="res://pics/ground.png" type="Texture" id=1]
[ext_resource path="res://pics/rocket_noflame.png" type="Texture" id=2]
[ext_resource path="res://pics/flame.png" type="Texture" id=3]
[ext_resource path="res://moonlander.gd" type="Script" id=4]
[ext_resource path="res://sounds/Alien_Machine_Gun-Matt_Cutillo-2023875589.mp3" type="AudioStream" id=5]
[ext_resource path="res://Satelite1.gd" type="Script" id=6]
[ext_resource path="res://sounds/Rocket Thrusters-SoundBible.com-1432176431.mp3" type="AudioStream" id=7]
[ext_resource path="res://sounds/Atomic_Bomb-Sound_Explorer-897730679.mp3" type="AudioStream" id=8]

[node name="moonlander" type="Node2D"]
position = Vector2( 533, 286 )
rotation = -6.28319
script = ExtResource( 4 )

[node name="Planet" type="TextureRect" parent="."]
margin_right = 39.9999
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground" type="Sprite" parent="Planet"]
position = Vector2( 461.992, 1776 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Planet/Ground"]
position = Vector2( -607.993, -1595 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Planet/Ground/Area2D"]
polygon = PoolVector2Array( 122.998, 388.998, 117.998, 388, 117.998, 394, 103.998, 398, 75.9981, 413, 68.9981, 413, 39.998, 424, 6.99799, 440, -30.0021, 454, -30.0021, 463, -12.0023, 489, -11.0025, 544, -18.0026, 569, -90.0027, 593, -108.003, 593, -187.003, 621.999, -229.003, 642.999, -275.003, 672.999, -296.003, 691.999, -314.003, 716.999, -326.003, 754.999, -325.004, 780.999, -317.004, 798.999, -307.004, 865.999, -294.004, 897.999, -291.004, 974.999, -301.005, 1058, -316.005, 1102, -382.005, 1212, -430.006, 1280, -451.006, 1346, -501.006, 1439, -589.007, 1552, -657.007, 1634, -725.008, 1704, -789.008, 1759, -806.008, 1821, -557.009, 1898, -520.009, 1948, -500.009, 1977, -527.009, 2040, -564.009, 2111, -750.01, 2309, -751.01, 2318, -546.01, 2274, -489.01, 2269, -579.011, 2451, -622.011, 2557, -499.011, 2538, -456.011, 2539, -488.012, 2604, -506.012, 2674, -361.012, 2635, -322.012, 2616, -333.012, 2697, -326.012, 2720, -193.012, 2678, -178.012, 2682, -214.013, 2801, -197.013, 2814, -110.012, 2776, -101.013, 2798, -116.013, 2892, -52.013, 2892, -49.0129, 2887, 43.9871, 2871, 45.9869, 2927, 85.9869, 2912, 117.987, 2927, 118.987, 2959, 188.987, 2946, 266.987, 2920, 293.987, 2939, 309.987, 2964, 341.986, 3035, 379.986, 3066, 450.986, 3066, 567.986, 3051, 604.986, 3038, 633.986, 3039, 666.986, 3030, 714.986, 3027, 788.986, 3015, 812.986, 3015, 833.987, 3006, 857.987, 3007, 875.987, 2998, 932.987, 2979, 939.987, 2967, 1081.99, 2935, 1135.99, 2935, 1214.99, 2944.01, 1296.99, 2943.01, 1331.99, 2936.01, 1355.99, 2919.01, 1354.99, 2904.01, 1378.99, 2894.01, 1505.99, 2912.01, 1560.99, 2911.01, 1523.99, 2899.01, 1395.99, 2842.01, 1388.99, 2827.01, 1674.99, 2838.01, 1647.99, 2820.01, 1645.99, 2812.01, 1587.99, 2772.01, 1558.99, 2755.01, 1639.99, 2759.01, 1872.99, 2816.01, 1807.99, 2792.01, 1701.99, 2746.01, 1809.99, 2763.01, 1962.99, 2755.01, 1863.99, 2695.01, 1982.99, 2719.01, 2133.99, 2763.01, 2245.99, 2806.01, 2057.99, 2692.01, 1867.99, 2462.01, 1851.99, 2351.01, 1873.99, 2328.01, 1919.99, 2318.01, 1993.99, 2318.01, 2052.99, 2331.01, 2052.99, 2325.01, 1994.99, 2299.01, 1919.99, 2220.01, 1907.99, 2148.01, 1920.99, 2102.01, 1960.99, 2060.01, 1960.99, 2056.01, 2012.99, 2025.01, 2028.99, 2008.01, 2040.99, 2005.01, 2040.99, 2000.01, 2033.99, 1994.01, 2000.99, 1972.01, 1991.99, 1972.01, 1952.99, 1944.01, 1948.99, 1945.01, 1928.99, 1911.01, 1927.99, 1876.01, 1952.99, 1856.01, 1952.99, 1852.01, 2005.99, 1818.01, 2012.99, 1817.01, 2051.99, 1793.01, 2052.99, 1786.01, 2076.99, 1763.01, 2076.99, 1754.01, 2019.99, 1731.01, 1981.99, 1700.01, 1968.99, 1670.01, 1969.99, 1619.01, 1981.99, 1572.01, 1981.99, 1538.01, 1961.99, 1525.01, 1954.99, 1527.01, 1947.99, 1517.01, 1949.99, 1494.01, 1963.99, 1485.01, 1972.99, 1460.01, 1972.99, 1450.01, 1976.99, 1439.01, 1971.99, 1435.01, 1911.99, 1420.01, 1886.99, 1410.01, 1857.99, 1403.01, 1841.99, 1395.01, 1835.99, 1395.01, 1836.99, 1386.01, 1841.99, 1387.01, 1851.99, 1364.01, 1852.99, 1358.01, 1867.99, 1335.01, 1871.99, 1335.01, 1871.99, 1331.01, 1908.99, 1264.01, 1908.99, 1258.01, 1823.99, 1259.01, 1819.99, 1255.01, 1819.99, 1250.01, 1814.99, 1245.01, 1811.99, 1239.01, 1811.99, 1226.01, 1815.99, 1223.01, 1815.99, 1215.01, 1819.99, 1215.01, 1819.99, 1195.01, 1823.99, 1195.01, 1823.99, 1175.01, 1828.99, 1175.01, 1827.99, 1163.01, 1835.99, 1155.01, 1835.99, 1150.01, 1839.99, 1147.01, 1839.99, 1139.01, 1852, 1112.01, 1852, 1062.01, 1848, 1062.01, 1840, 1058.01, 1828, 1058.01, 1820, 1050.01, 1811, 1050.01, 1808, 1046.01, 1740, 1046.01, 1740, 1042.01, 1691, 1042.01, 1687, 1037.01, 1680, 1034.01, 1660, 1034.01, 1660, 1030.01, 1644, 1030.01, 1640, 1026.01, 1636, 1026.01, 1632, 1018.01, 1623, 1018.01, 1624, 1014.01, 1620, 1013.01, 1621, 1010.01, 1616, 1010.01, 1612, 1006.01, 1611, 1000.01, 1608, 997.007, 1608, 993.007, 1604, 986.007, 1599, 981.007, 1596, 975.007, 1596, 959.007, 1592, 959.007, 1592, 942.007, 1588, 942.007, 1588, 930.007, 1584, 929.007, 1584, 926.007, 1581, 926.007, 1580, 918.007, 1576, 917.007, 1575, 913.007, 1571, 914.007, 1573, 901.007, 1561, 878.007, 1506, 818.007, 1495, 815.007, 1470, 779.007, 1428, 749.006, 1390, 734.006, 1370, 722.006, 1350, 716.006, 1330, 703.006, 1280, 680.006, 1256, 647.006, 1256, 639.006, 1237, 630.005, 1228, 628.005, 1224, 621.005, 1218, 617.005, 1208, 613.005, 1117, 613.005, 1080, 597.005, 1067, 583.005, 1064, 576.005, 1064, 553.005, 1060, 548.005, 1001, 554.004, 955.997, 568.004, 933.997, 570.004, 927.998, 490.004, 840.997, 559.004, 827.997, 559.004, 776.998, 433.003, 684.997, 562.003, 674.997, 555.003, 637.998, 480.003, 584.998, 420.003, 573.998, 422.003, 552.998, 493.002, 546.998, 548, 532.998, 557, 500.997, 556.002, 490.997, 565.002, 460.997, 576.002, 406.997, 573.002, 335.998, 555.999, 260.998, 514.998, 251.998, 505.998, 173.998, 448.998 )

[node name="Satelite1" type="TextureRect" parent="Planet/Ground"]
margin_left = -148.992
margin_top = -1721.0
margin_right = -16.9924
margin_bottom = -1625.0
rect_pivot_offset = Vector2( 76.653, 46.5414 )
texture = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Satelite1b" type="TextureRect" parent="Planet/Ground/Satelite1"]
margin_left = 155.0
margin_top = 93.0007
margin_right = 287.0
margin_bottom = 189.001
rect_rotation = 180.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2DSat" type="Area2D" parent="Planet/Ground/Satelite1"]
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Planet/Ground/Satelite1/Area2DSat"]
polygon = PoolVector2Array( 32.9999, 9.00015, 52.9999, 9.00024, 55.9999, 11.0002, 55.9998, 30.0002, 61.9998, 39.0003, 60.9999, 24.0003, 69.9999, 17.0003, 85.9999, 17.0004, 92.9999, 24.0004, 92.9998, 34.0004, 103, 23.0005, 106, 12.0005, 108, 9.00049, 124, 10.0005, 126, 13.0005, 126, 20.0005, 123, 22.0005, 116, 22.0005, 111, 34.0005, 101, 44.0005, 110, 57.0005, 110, 72.0005, 120, 72.0005, 124, 75.0005, 124, 81.0005, 122, 84.0005, 102, 84.0005, 98.9996, 81.0004, 98.9996, 64.0004, 93.9996, 57.0004, 94.9996, 66.0004, 84.9996, 76.0004, 69.9996, 75.0003, 61.9996, 69.0003, 61.9996, 58.0003, 50.9996, 71.0002, 47.9996, 82.0002, 45.9995, 84.0002, 30.9995, 83.0001, 28.9996, 81.0001, 28.9996, 73.0001, 31.9996, 71.0002, 38.9996, 71.0002, 42.9996, 60.0002, 53.9998, 50.0002, 44.9998, 36.0002, 44.9999, 22.0002, 32.9999, 20.0002, 30.9999, 18.0001, 30.9999, 12.0001 )

[node name="FlameBurn1" type="Sprite" parent="Planet/Ground/Satelite1"]
visible = false
position = Vector2( 77.8354, -18.8452 )
rotation = -4.46638e-06
scale = Vector2( 4.61374, 4.22441 )
texture = ExtResource( 3 )

[node name="FlameBurn2" type="Sprite" parent="Planet/Ground/Satelite1"]
visible = false
position = Vector2( 83.4918, -71.1713 )
rotation = -4.46638e-06
scale = Vector2( 5.49226, 5.57969 )
texture = ExtResource( 3 )

[node name="BoomSound" type="AudioStreamPlayer" parent="Planet/Ground/Satelite1/FlameBurn2"]
stream = ExtResource( 8 )
volume_db = -20.1

[node name="Flamecontrole" type="Timer" parent="Planet/Ground/Satelite1"]
wait_time = 0.129

[node name="Rocket" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 1.0
margin_right = 48.0
margin_bottom = 41.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( -0.560547, -0.617584 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rocket" type="Sprite" parent="Rocket"]
position = Vector2( -12, 3 )
rotation = -4.46638e-06
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Rocket/Rocket"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rocket/Rocket/Area2D"]
polygon = PoolVector2Array( 10.0002, -30.9999, 1.00024, -30, -4.99982, -22.0001, -4, -5.00006, -22.0001, 10.9998, -27.0002, 21.9997, -35.0002, 21.9997, -39.0003, 28.9996, -35.0003, 34.9997, -18.0003, 34.9998, -15.0002, 23.9998, -1.00012, 7.99997, 18.9999, 2.00012, 28.9999, 8.00021, 32.9998, 19.0003, 32.9997, 34.0003, 35.9996, 36.0003, 55.9996, 36.0005, 57.9997, 33.0005, 57.9998, 26.0005, 53.9998, 24.0005, 45.9998, 24.0004, 43.9998, 22.0004, 43.9999, 8.00037, 32.0001, -6.99976, 27.0001, -10.9998, 27.0001, -15.9998, 27.0002, -24.9998, 22.0002, -28.9998 )

[node name="LeftFoot" type="Area2D" parent="Rocket/Rocket"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rocket/Rocket/LeftFoot"]
position = Vector2( 14.5399, -40.1222 )
scale = Vector2( 1.54228, 2.1745 )
polygon = PoolVector2Array( -31.473, 35.0065, -28.8795, 37.7659, -23.6924, 37.7659, -21.0988, 35.0066 )

[node name="RightFoot2" type="Area2D" parent="Rocket/Rocket"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rocket/Rocket/RightFoot2"]
position = Vector2( 124.957, -36.4467 )
scale = Vector2( 2.96055, 2.09177 )
polygon = PoolVector2Array( -30.0476, 35.1124, -28.3587, 37.9808, -25.3187, 37.9808, -23.2919, 35.1124 )

[node name="FlameUp" type="Sprite" parent="Rocket"]
position = Vector2( 0.000244141, 7.00029 )
rotation = -4.46638e-06
texture = ExtResource( 3 )

[node name="FlameSoundLoud" type="AudioStreamPlayer" parent="Rocket/FlameUp"]
stream = ExtResource( 7 )
volume_db = -2.0
autoplay = true
stream_paused = true

[node name="FlameLeft" type="Sprite" parent="Rocket"]
position = Vector2( -46.9998, 32.0002 )
rotation = 1.57079
scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 3 )

[node name="FlameSound" type="AudioStreamPlayer" parent="Rocket/FlameLeft"]
stream = ExtResource( 7 )
volume_db = -5.0
autoplay = true
stream_paused = true

[node name="FlameRight" type="Sprite" parent="Rocket"]
position = Vector2( 45, 33.0002 )
rotation = -1.5708
scale = Vector2( 0.3, 0.4 )
texture = ExtResource( 3 )

[node name="FlameSound" type="AudioStreamPlayer" parent="Rocket/FlameRight"]
stream = ExtResource( 7 )
volume_db = -5.0
autoplay = true
stream_paused = true

[node name="FlameBurn1" type="Sprite" parent="Rocket"]
visible = false
position = Vector2( 3.00046, -115 )
rotation = -4.46638e-06
scale = Vector2( 4.61374, 4.22441 )
texture = ExtResource( 3 )

[node name="FlameBurn2" type="Sprite" parent="Rocket"]
visible = false
position = Vector2( 8.65691, -167.326 )
rotation = -4.46638e-06
scale = Vector2( 5.49226, 5.57969 )
texture = ExtResource( 3 )

[node name="BoomSound" type="AudioStreamPlayer" parent="Rocket/FlameBurn2"]
stream = ExtResource( 8 )
volume_db = -20.1

[node name="Lazer" type="Sprite" parent="Rocket"]
visible = false
position = Vector2( 0.759539, -334.473 )
scale = Vector2( 0.101, 7.635 )
texture = ExtResource( 3 )

[node name="LazerTimer" type="Timer" parent="Rocket/Lazer"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Rocket/Lazer"]
stream = ExtResource( 5 )
volume_db = -15.731

[node name="Timer" type="Timer" parent="Rocket/Lazer"]
wait_time = 0.101
autostart = true

[node name="Area2D" type="Area2D" parent="Rocket/Lazer"]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rocket/Lazer/Area2D"]
polygon = PoolVector2Array( -7.51855, 40.0096, -17.4033, -10.1542, 2.39893, -10.0232, 12.2832, 40.0096 )

[node name="Flamecontrole" type="Timer" parent="Rocket"]
wait_time = 0.129

[node name="GG" type="Label" parent="Rocket"]
visible = false
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -89.9995
margin_top = -107.0
margin_right = -1.99951
margin_bottom = -43.0004
rect_scale = Vector2( 2, 2 )
text = "GG, YOU WIN"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Planet/Ground/Satelite1/Area2DSat" to="." method="_on_Area2DSat_area_entered"]
[connection signal="area_entered" from="Planet/Ground/Satelite1/Area2DSat" to="Planet/Ground/Satelite1" method="_on_Area2DSat_area_entered"]
[connection signal="timeout" from="Planet/Ground/Satelite1/Flamecontrole" to="Planet/Ground/Satelite1" method="_on_Flamecontrole_timeout"]
[connection signal="area_entered" from="Rocket/Rocket/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Rocket/Rocket/LeftFoot" to="." method="_on_LeftFoot_area_entered"]
[connection signal="area_exited" from="Rocket/Rocket/LeftFoot" to="." method="_on_LeftFoot_area_exited"]
[connection signal="area_entered" from="Rocket/Rocket/RightFoot2" to="." method="_on_RightFoot2_area_entered"]
[connection signal="area_exited" from="Rocket/Rocket/RightFoot2" to="." method="_on_RightFoot2_area_exited"]
[connection signal="timeout" from="Rocket/Lazer/LazerTimer" to="." method="_on_LazerTimer_timeout"]
[connection signal="timeout" from="Rocket/Lazer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Rocket/Flamecontrole" to="." method="_on_Flamecontrole_timeout"]
